# nss_wrapper

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  CPackConfig.cmake  ChangeLog  ConfigureChecks.cmake  config.h.cmake  nss_wrapper-config.cmake.in  nss_wrapper.pc.cmake
src/: CMakeLists.txt  nss_wrapper.c
tests/: CMakeLists.txt  test_getaddrinfo.c  test_gethostby_name_addr.c  test_getpwuid_module.c  test_nwrap_disabled.c  testsuite.c
